Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30060

LLVM WOA64/ARM64 clang-cl.exe is incorrectly detected as 32-bit x86

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 13.0.0-beta1
    • Qt Creator 12.0.0
    • C/C++/Obj-C++ Support
    • None
    • Windows 11
      Visual Studio 2022
      Windows Dev Kit 2023 (Snapdragon ARM64)
    • Windows
    • 05d9e50af (13.0)

    Description

      The WOA64 (Windows on ARM) LLVM compiler is incorrectly detected as "LLVM 32 bit based on MSVC2022" (x86-windows-msvc2022-pe-32bit) instead of aarch64 by Qt Creator. This means LLVM cannot be used for the ARM64 Qt toolchain

      Steps to reproduce:

      1. Install WOA64 version of LLVM: https://github.com/llvm/llvm-project/releases/download/llvmorg-17.0.6/LLVM-17.0.6-woa64.exe
      2. Open Qt Creator and check Preferences > Kits > Compilers.
        • Expected: list contains an entry "LLVM WOA64 based on MSVC2022" or similar, but actually contains an entry "LLVM 32 bit based on MSVC2022" for "C:\Program Files\LLVM\bin\clang-cl.exe".
      3. Select "LLVM 32 bit based on MSVC2022" as C/C++ compiler for "Desktop Qt 6.6.1 MSVC2019 ARM64" kit
        • Error (see attached screenshot): The compiler "LLVM 32 bit based on MSVC2022" (x86-windows-msvc2022-pe-32bit) cannot produce code for the Qt version "Qt 6.6.1 MSVC2019 ARM64" (arm-windows-msvc2019-pe-64bit).

      Output from clang-cl.exe --version:

      clang version 17.0.6
      Target: aarch64-pc-windows-msvc
      Thread model: posix
      InstalledDir: C:\Program Files\LLVM\bin

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            fseiffert Frederik Seiffert
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes