ProjectExplorer: Check full ABI, not just word width

... when choosing the default MSVC for clang-cl.

Fixes: QTCREATORBUG-30060
Change-Id: I59c4e7dbf227596cbd57c5421eb5a3da7a16c0a0
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Cristian Adam <cristian.adam@qt.io>